--- a/about.html
+++ b/about.html
@@ -103,49 +103,50 @@
         </p>
         <hr>
 
-        <h3 class="bodyTypeBold marginM--top margin1rem--bottom">Achievements 🏆</h3>
+        <h3 class="h4-caseStudy marginM--top margin1rem--bottom">Achievements 🏆</h3>
+
+        <p class="bodyType margin1rem--bottom">
+          <span class="h3-caseStudy">1st Place Award</span>
+          <br>—A+E Networks + Adobe Creative Jam Live</span>
+        </p>
+
+        <p class="bodyType margin1rem--bottom">
+          <span class="h3-caseStudy">3rd Place Award</span>
+          <br>—Nickelodeon + Adobe Creative Jam Live</span>
+        </p>
+
+        <p class="bodyType margin1rem--bottom">
+          <span class="h3-caseStudy">4th Place Award</span>
+          <br>—Airbnb + Adobe Creative Jam Live</span>
+        </p>
+
+        <p class="bodyType margin1rem--bottom">
+          <span class="h3-caseStudy">Honourable Mention</span>
+          <br>—RGD Student Awards: Bell Media Award for
+          Typography (Digital)</span>
+        </p>
+
+        <p class="bodyType margin1rem--bottom">
+          <span class="h3-caseStudy">Michael Plexman Award for Creative Innovation</span>
+          <br>—York University Scholarship</span>
+        </p>
+
+        <p class="bodyType margin1rem--bottom">
+          <span class="h3-caseStudy">Brazilian Ball Interdisciplinary Award</span>
+          <br>—York University Scholarship</span>
+        </p>
+
+        <p class="bodyType margin1rem--bottom">
+          <span class="h3-caseStudy">The Bill Chan Bursary</span>
+          <br>—York University Bursary</span>
+        </p>
+
+        <p class="bodyType">
+          <span class="h3-caseStudy">Continuing Student Scholarship</span>
+          <br>—York University Scholarship</span>
+        </p>
+
       </div>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">1st Place Award</span>
-        <br>—A+E Networks + Adobe Creative Jam Live</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">3rd Place Award</span>
-        <br>—Nickelodeon + Adobe Creative Jam Live</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">4th Place Award</span>
-        <br>—Airbnb + Adobe Creative Jam Live</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">Honourable Mention</span>
-        <br>—RGD Student Awards: Bell Media Award for
-        Typography (Digital)</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">Michael Plexman Award for Creative Innovation</span>
-        <br>—York University Scholarship</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">Brazilian Ball Interdisciplinary Award</span>
-        <br>—York University Scholarship</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">The Bill Chan Bursary</span>
-        <br>—York University Bursary</span>
-      </p>
-
-      <p class="quickStatType">
-        <span class="quickStatTitleType">Continuing Student Scholarship</span>
-        <br>—York University Scholarship</span>
-      </p>
 
     </div>
   </div>
@@ -168,9 +169,6 @@
         <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" class="button">Get in touch</a>
         <p class="smallText elsewhereMargin">Elsewhere</p>
         <div class="socialFooter">
-          <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/mail.svg" loading="lazy" alt="Email">
-          </a>
           <a href="https://www.linkedin.com/in/jaspertu/" target="_blank">
             <img class="socialButtonFooter hvr-grow" src="./img/linkedin.svg" loading="lazy" alt="LinkedIn">
           </a>
