--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
 
   <meta name="theme-color" content="#fafafa">
 
-  <!-- Typeface DM Sans -->
+  <!-- Typefaces: DM Sans, Sora, Nunito, Caudex -->
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
 
   <!-- SEO -->
   <meta name="description"
@@ -73,25 +83,25 @@
         <!-- Right side of header (text) -->
         <div class="headerRight">
           <h1 class="jasperTitle">
-            Hi, I'm Jasper Tu!<img class="emojiLarge" src="./img/peaceSignEmoji.png" loading="lazy" alt="Peace Sign">
+            <span class="jasperTitleBold">Jasper Tu</span> is a product designer who loves creating enjoyable, elegant
+            and humane solutions for
+            complex
+            systems.
+            <!--<img class="emojiLarge" src="./img/peaceSignEmoji.png" loading="lazy" alt="Peace Sign">-->
           </h1>
-          <h2 class="jasperFacts">
-            <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Humane product designer
-            <span class="moreDetail">who can
-              code
-            </span><br>
+          <h2 class="jasperFacts moreDetail">
+            <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Avid front-end coder,
+            prototype enthusiast
+            <br>
             <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Former <a
-              class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> <span
-              class="moreDetail">Product</span>
+              class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> Product
             Design
             Intern<br>
-            <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Loves <span
-              class="moreDetail">delightfully</span> usable
-            experiences<br>
             <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Seeking 2021 product
             design internships<br>
           </h2>
 
+          <!--
           <div class="socialHeader">
             <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" target="_blank">
               <img class="socialButton hvr-push" src="./img/mail.svg" loading="lazy" alt="Email">
@@ -108,7 +118,7 @@
             <a href="https://www.instagram.com/jasper_tu/" target="_blank">
               <img class="socialButton hvr-push" src="./img/instagram.svg" loading="lazy" alt="Instagram">
             </a>
-          </div>
+          </div>-->
 
           <div class="downButtonContainer">
             <a class="downButton hvr-forward" address="true">
@@ -143,6 +153,7 @@
               <span class="projectType">Product Thinking</span>
               <span class="projectType">Interaction</span>
               <span class="projectType">Visual</span>
+              <span class="projectType">Desktop</span>
             </div>
           </a>
         </article>
@@ -161,6 +172,26 @@
               </p> -->
               <span class="projectType">Product Design</span>
               <span class="projectType">Industrial Design</span>
+              <span class="projectType">Strategy</span>
+            </div>
+          </a>
+        </article>
+
+        <!-- Kumo Companion App -->
+        <article>
+          <a class="projectSingle" href="kumoApp.html">
+            <img class="projectCover" src="./img/home-cover-Kumo-Mask.jpg" loading="lazy" alt="Kumo Companion App">
+            <div class="reveal">
+              <h2 class="projectTitle">Kumo Companion App</h2>
+              <p class="projectDescription">Track Kumo usage and stay aware of your surroundings.</p>
+              <!-- <p class="awardText">
+                <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
+                Adobe Jam 1st Place
+              </p> -->
+              <span class="projectType">UI/UX</span>
+              <span class="projectType">Research</span>
+              <span class="projectType">User Testing</span>
+              <span class="projectType">UX Writing</span>
             </div>
           </a>
         </article>
@@ -177,8 +208,10 @@
                 Adobe Jam 1st Place
               </p> -->
               <span class="projectType">User Research</span>
-              <span class="projectType">UI & UX <span class="moreDetail">Design</span></span>
-              <span class="projectType">iOS</span>
+              <span class="projectType">UI/UX
+                <!--<span class="moreDetail">Design</span>-->
+              </span>
+              <span class="projectType">Mobile</span>
             </div>
           </a>
         </article>
@@ -192,7 +225,9 @@
               <p class="projectDescription">Connecting kids with an educational
                 game while physically distanced.</p>
               <span class="projectType">User Research</span>
-              <span class="projectType">UI & UX <span class="moreDetail">Design</span></span>
+              <span class="projectType">UI/UX
+                <!--<span class="moreDetail">Design</span>-->
+              </span>
               <span class="projectType">Tablet</span>
             </div>
           </a>
@@ -213,7 +248,7 @@
           </a>
         </article>
 
-        <!--Canada's Languages-->
+        <!--Canada's Languages
         <article>
           <a class="projectSingle" href="canadaLanguages.html">
             <img class="projectCover" src="./img/home-cover-Languages.jpg" loading="lazy" alt="Historia">
@@ -226,6 +261,7 @@
             </div>
           </a>
         </article>
+        -->
 
       </section>
     </div>
@@ -249,9 +285,9 @@
         <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" class="button">Get in touch</a>
         <p class="smallText elsewhereMargin">Elsewhere</p>
         <div class="socialFooter">
-          <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" target="_blank">
+          <!--<a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" target="_blank">
             <img class="socialButtonFooter hvr-grow" src="./img/mail.svg" loading="lazy" alt="Email">
-          </a>
+          </a>-->
           <a href="https://www.linkedin.com/in/jaspertu/" target="_blank">
             <img class="socialButtonFooter hvr-grow" src="./img/linkedin.svg" loading="lazy" alt="LinkedIn">
           </a>
