--- a/playdium.html
+++ b/playdium.html
@@ -23,8 +23,21 @@
 
   <meta name="theme-color" content="#fafafa">
 
-  <!-- Typeface DM Sans -->
+  <!-- Typefaces: DM Sans, Sora, Nunito, Caudex, Bitter -->
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
 
   <!-- SEO -->
   <meta name="description"
@@ -62,79 +75,98 @@
     </nav>
   </div>
 
+  <!-- Case study title -->
+  <div class="gridCenterer">
+    <header class="caseStudyHeader container reveal">
+      <h1 class="title-caseStudy">Playdium</h1>
+      <h2 class="subtitle-caseStudy">Connecting kids while physically distanced</h2>
+      <h3 class="bodyType marginXS--top">Jasper Tu • 2 min read</h3>
+    </header>
+  </div>
+
+  <!--Cover photo-->
+  <div class="playdiumHero caseStudyHero"></div>
+
   <!-- Back to top button -->
   <div class="topButton topButtonHidden" onclick="window.scrollTo(0, 0)" ;=""></div>
 
-  <!-- Large desktop header -->
-  <div class="gridCenterer marginTopBottom">
-    <div class="container">
+  <!-- Case study content -->
+  <div class="caseStudyContent">
 
-      <header class="jasperHeader reveal">
-        <!-- Right side of header (text) -->
-        <div class="headerRight">
-          <div class="headerTitleButton">
-            <div>
-              <h1 class="jasperTitle">
-                Playdium
-              </h1>
-              <h2 class="bodyType">
-                <img class="avatar" src="./img/IMG_2685.PNG" loading="lazy" alt="Avatar">
-                <span class="bodyTypeBold">Jasper Tu</span> • Sep 2020 • 1
-                min read
-              </h2>
+    <!--Case study details (intro) -->
+    <div class="caseStudyDetailsBG">
+      <div class="gridCenterer">
+        <div class="container">
+          <div class="caseStudyDetails">
+            <!-- Left side -->
+            <div class="caseStudyDetailsLeft">
+              <h2 class="h2-caseStudy-DM">Background</h2>
+              <p class="bodyType-DM">
+                A project completed for the Nickelodeon + Adobe XD Creative Jam, winning 3rd place. The design prompt
+                was to design a kids' game to connect them amidst the pandemic and educate them on COVID safety.
+              </p>
+              <h3 class="h3-caseStudy-DM marginM--top">My Contribution</h3>
+              <p class="bodyType-DM">
+                I took part in research, ideation, wireframing, and transitioning our screens into hi-fi. I also
+                contributed to mapping out the user journey, design system and helped with prototyping some animations.
+                Some of my focus
+                points were the Avatar customization flow, in-game flow, and figuring out how the controls would be laid
+                out in-game (+ what controls to include in the first place).
+              </p>
+              <p class="bodyTypeLarge-DM marginM--top marginS2--bottom">View the live XD prototype:</p>
+              <a href="https://xd.adobe.com/view/e77d2740-afee-4cd0-bc67-a7ae5c67774d-b22e/?fullscreen" target="_blank"
+                class="button-DM">XD Prototype</a>
             </div>
-            <div class="buttonMarginTop">
-              <a href="https://xd.adobe.com/view/e77d2740-afee-4cd0-bc67-a7ae5c67774d-b22e/?fullscreen" class="button"
-                target="_blank">Link to XD
-                Prototype</a>
+            <!-- Right side -->
+            <div class="caseStudyDetailsRight">
+              <h3 class="h3-caseStudy-DM">Role</h3>
+              <p class="bodyType-DM">Product Designer, Research, Ideation, Design Systems, Prototyping</p>
+              <h3 class="h3-caseStudy-DM marginM--top">Team</h3>
+              <p class="bodyType-DM">Jasper Tu (Me), Kiran Patel,
+                Paco Lui, Andrew Del Rizzo</p>
+              <h3 class="h3-caseStudy-DM marginM--top">Duration</h3>
+              <p class="bodyType-DM">48 hours, April 2020</p>
+              <h3 class="h3-caseStudy-DM marginM--top">Tools Used</h3>
+              <p class="bodyType-DM">Adobe XD, Illustrator, Magica Voxel</p>
             </div>
           </div>
-
-          <!--Cover photo-->
-          <img class="caseStudyCover" src="./img/home-cover-Playdium.jpg" loading="lazy" alt="FB cover">
-
-          <!--Project Quick Stats-->
-          <h3 class="quickStatType">
-            <p class="quickStatTitleType">Overview</p>
-            A project completed for the Nickelodeon + Adobe XD Creative Jam, winning 3rd place<br>
-            <p class="quickStatTitleType marginS--top">Team</p>
-            Jasper Tu, Kiran Patel, Paco Lui, Andrew Del Rizzo
-            <p class="quickStatTitleType marginS--top">Role</p>
-            Research, Ideation, UI/UX, Design System
-            <p class="quickStatTitleType marginS--top">Tools</p>
-            Adobe XD
-            <p class="quickStatTitleType marginS--top">Duration</p>
-            <p class="marginS--bottom">48 hours, April 2020</p>
-            <hr>
-          </h3>
         </div>
-      </header>
-
-      <!-- Main content -->
-      <section class="marginM--top bodyWrapper">
-        <h2 class="projectTitle marginXS--bottom">What is Playdium?</h2>
-        <p class="bodyType marginS--bottom">
-          Grade 6 to 8 kids enjoy being physically connected through fun, outdoor games. However, this positive
-          experience has now been taken away due to COVID-19. From being locked up at home, user research revealed 11–13
-          year olds often suffer from increased anxiety, nightmares, and meltdowns. Hence, we digitized manhunt—one of
-          their favourite games—to let 11–13 year olds spark joy, relieve stress, and enlighten them on best health
-          practices.
-        </p>
-
-        <p class="bodyType">
-          Playdium cheers up lonely children stuck at home by letting them personalize their own character, theme their
-          game worlds with Nickelodeon shows, and most importantly, connect with friends and family through manhunt
-          within a rich, 3D world. Simultaneously, it facilitates learning of important health and safety knowledge
-          pertaining to COVID-19; if one gets “tagged”, they are challenged to answer questions correctly in a time
-          limit. Enriching the game experience are items which give temporary power-ups.
-        </p>
-      </section>
-      <div class="mediaCenterer">
-        <h3 class=" bodyTypeBold marginM--top marginXS--bottom">Live Prototype</h3>
-        <iframe class="playdiumPrototype"
-          src="https://xd.adobe.com/embed/e77d2740-afee-4cd0-bc67-a7ae5c67774d-b22e/?fullscreen" frameborder="0"
-          allowfullscreen></iframe>
       </div>
+    </div>
+
+    <!-- Main content -->
+    <section class="caseStudySection">
+      <div class="gridCenterer">
+        <div class="container">
+          <div class="bodyWrapper">
+            <h2 class="h2-caseStudy marginXS--bottom">What is Playdium?</h2>
+            <p class="bodyType marginS--bottom">
+              Grade 6 to 8 kids enjoy being physically connected through fun, outdoor games. However, this positive
+              experience has now been taken away due to COVID-19. From being locked up at home, user research revealed
+              11–13
+              year olds often suffer from increased anxiety, nightmares, and meltdowns. Hence, we digitized manhunt—one
+              of
+              their favourite games—to let 11–13 year olds spark joy, relieve stress, and enlighten them on best health
+              practices.
+            </p>
+
+            <p class="bodyType">
+              Playdium cheers up lonely children stuck at home by letting them personalize their own character, theme
+              their
+              game worlds with Nickelodeon shows, and most importantly, connect with friends and family through manhunt
+              within a rich, 3D world. Simultaneously, it facilitates learning of important health and safety knowledge
+              pertaining to COVID-19; if one gets “tagged”, they are challenged to answer questions correctly in a time
+              limit. Enriching the game experience are items which give temporary power-ups.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="mediaCenterer">
+      <h3 class="h4-caseStudy marginM--top marginXS--bottom">Live Prototype</h3>
+      <iframe class="playdiumPrototype marginS--bottom"
+        src="https://xd.adobe.com/embed/e77d2740-afee-4cd0-bc67-a7ae5c67774d-b22e/?fullscreen" frameborder="0"
+        allowfullscreen></iframe>
     </div>
   </div>
 
@@ -156,9 +188,6 @@
         <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" class="button">Get in touch</a>
         <p class="smallText elsewhereMargin">Elsewhere</p>
         <div class="socialFooter">
-          <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/mail.svg" loading="lazy" alt="Email">
-          </a>
           <a href="https://www.linkedin.com/in/jaspertu/" target="_blank">
             <img class="socialButtonFooter hvr-grow" src="./img/linkedin.svg" loading="lazy" alt="LinkedIn">
           </a>
