--- a/spark.html
+++ b/spark.html
@@ -23,8 +23,21 @@
 
   <meta name="theme-color" content="#fafafa">
 
-  <!-- Typeface DM Sans -->
+  <!-- Typefaces: DM Sans, Sora, Nunito, Caudex, Bitter -->
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
 
   <!-- SEO -->
   <meta name="description"
@@ -62,162 +75,145 @@
     </nav>
   </div>
 
+  <!-- Case study title -->
+  <div class="gridCenterer">
+    <header class="caseStudyHeader container reveal">
+      <h1 class="title-caseStudy">Spark</h1>
+      <h2 class="subtitle-caseStudy">A conference website for creative pros</h2>
+      <h3 class="bodyType marginXS--top">Jasper Tu • 1 min read</h3>
+    </header>
+  </div>
+
+  <!--Cover photo-->
+  <div class="sparkHero caseStudyHero"></div>
+
   <!-- Back to top button -->
   <div class="topButton topButtonHidden" onclick="window.scrollTo(0, 0)" ;=""></div>
 
-  <!-- Large desktop header -->
-  <div class="gridCenterer marginTopBottom">
-    <div class="container">
+  <!-- Case study content -->
+  <div class="caseStudyContent">
 
-      <header class="jasperHeader reveal">
-        <!-- Right side of header (text) -->
-        <div class="headerRight">
-          <div class="headerTitleButton">
-            <div>
-              <h1 class="jasperTitle">
-                Spark
-              </h1>
-              <h2 class="bodyType">
-                <img class="avatar" src="./img/IMG_2685.PNG" loading="lazy" alt="Avatar">
-                <span class="bodyTypeBold">Jasper Tu</span> • Sep 2020 • 1
-                min read
-              </h2>
+    <!--Case study details (intro) -->
+    <div class="caseStudyDetailsBG">
+      <div class="gridCenterer">
+        <div class="container">
+          <div class="caseStudyDetails">
+            <!-- Left side -->
+            <div class="caseStudyDetailsLeft">
+              <h2 class="h2-caseStudy-DM">Background</h2>
+              <p class="bodyType-DM">
+                Zero-to-one design and web development of a one-page responsive site.
+              </p>
+              <h3 class="h3-caseStudy-DM marginM--top">What is Spark?</h3>
+              <p class="bodyType-DM">
+                An annual creative festival which merges art, science, culture and technology through educational
+                endeavours and multidisciplinary creative projects. Well-known throughout the creative and digital
+                spheres on an international level. Created to connect creative pros to each other, resources, and
+                opportunities.
+              </p>
+              <p class="bodyTypeLarge-DM marginM--top marginS2--bottom">View the live website:</p>
+              <a href="http://design.sheridanc.on.ca/~bd19f619/Project01/index.html" target="_blank"
+                class="button-DM">Live Website</a>
+              <p class="bodyTypeLarge-DM marginM--top marginS2--bottom">View the process book:</p>
+              <a href="./pdf/ysdn2005_TuJ_Proj01_Process.pdf" target="_blank" class="button-DM">Process Book</a>
             </div>
-            <div class="buttonMarginTop">
-              <a href="./pdf/ysdn2005_TuJ_Proj01_Process.pdf" class="button" target="_blank">Process
-                Book</a>
-              <div class="buttonMarginTop marginL--top">
-                <a href="http://design.sheridanc.on.ca/~bd19f619/Project01/index.html" class="button"
-                  target="_blank">View
-                  Live Site</a>
-              </div>
+            <!-- Right side -->
+            <div class="caseStudyDetailsRight">
+              <h3 class="h3-caseStudy-DM">Role</h3>
+              <p class="bodyType-DM">Solo designer and developer—Research, Ideation, UI/UX, Animation, Front-End</p>
+              <h3 class="h3-caseStudy-DM marginM--top">Team</h3>
+              <p class="bodyType-DM">Jasper Tu (Me)</p>
+              <h3 class="h3-caseStudy-DM marginM--top">Duration</h3>
+              <p class="bodyType-DM">September–October 2019</p>
+              <h3 class="h3-caseStudy-DM marginM--top">Tools Used</h3>
+              <p class="bodyType-DM">Figma, Sketch, Illustrator, After Effects, VS Code, HTML, CSS, JavaScript</p>
             </div>
           </div>
-
-          <!--Cover photo-->
-          <img class="caseStudyCover" src="./img/home-cover-Spark.jpg" loading="lazy" alt="FB cover">
-
-          <!--Project Quick Stats-->
-          <h3 class="quickStatType">
-            <p class="quickStatTitleType">Overview</p>
-            Zero-to-one design and web development of a one-page responsive site<br>
-            <p class="quickStatTitleType marginS--top">Team</p>
-            Jasper Tu
-            <p class="quickStatTitleType marginS--top">Role</p>
-            Research, Ideation, UI/UX, Animation, Front-End
-            <p class="quickStatTitleType marginS--top">Tools</p>
-            Figma, Illustrator, After Effects, HTML, CSS, JavaScript
-            <p class="quickStatTitleType marginS--top">Duration</p>
-            <p class="marginS--bottom">September–October 2019</p>
-            <hr>
-          </h3>
-        </div>
-      </header>
-
-      <!-- Main content -->
-      <section class="marginM--top bodyWrapper">
-
-        <h2 class="projectTitle marginXS--bottom">What is Spark?</h2>
-        <p class="bodyType marginS--bottom">
-          An annual creative festival which connects art, science,
-          culture and technology through educational endeavours and
-          multidisciplinary creative projects. Well-known throughout the
-          creative and digital spheres on an international level.
-        </p>
-        <p class="bodyTypeBold">Target Demographic</p>
-        <p class="bodyType">• Established professionals working in the creative industry
-          <br>• Ages 22+
-        </p>
-
-      </section>
-
-    </div>
-  </div>
-
-  <!-- Footer -->
-  <footer>
-    <div class="footerContainer">
-      <div class="footerLeft">
-        <h2 class="projectTitle">
-          Let's chat! <img class="emojiMedium" src="./img/speechBalloonEmoji.png" loading="lazy" alt="Speech Balloon">
-        </h2>
-        <h3 class="projectDescription">Interested in one of my projects? Or want
-          to crack bad jokes together? (I have plenty)</h3>
-        <p class="madeWithLove smallText copyrightMargin">Designed + coded with <img class="emojiSmall"
-            src="./img/sparklingHeartEmoji.png" loading="lazy" alt="Sparkling Heart"> by
-          Jasper Tu</p>
-      </div>
-
-      <div class="footerRight">
-        <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" class="button">Get in touch</a>
-        <p class="smallText elsewhereMargin">Elsewhere</p>
-        <div class="socialFooter">
-          <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/mail.svg" loading="lazy" alt="Email">
-          </a>
-          <a href="https://www.linkedin.com/in/jaspertu/" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/linkedin.svg" loading="lazy" alt="LinkedIn">
-          </a>
-          <a href="https://www.behance.net/JasperTu" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/behance.svg" loading="lazy" alt="Behance">
-          </a>
-          <a href="https://github.com/jaspertu" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/github.svg" loading="lazy" alt="GitHub">
-          </a>
-          <a href="https://www.instagram.com/jasper_tu/" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/instagram.svg" loading="lazy" alt="Instagram">
-          </a>
         </div>
       </div>
     </div>
-  </footer>
 
-  <!-- JavaScript -->
-  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+    <!-- Footer -->
+    <footer>
+      <div class="footerContainer">
+        <div class="footerLeft">
+          <h2 class="projectTitle">
+            Let's chat! <img class="emojiMedium" src="./img/speechBalloonEmoji.png" loading="lazy" alt="Speech Balloon">
+          </h2>
+          <h3 class="projectDescription">Interested in one of my projects? Or want
+            to crack bad jokes together? (I have plenty)</h3>
+          <p class="madeWithLove smallText copyrightMargin">Designed + coded with <img class="emojiSmall"
+              src="./img/sparklingHeartEmoji.png" loading="lazy" alt="Sparkling Heart"> by
+            Jasper Tu</p>
+        </div>
 
-  <!-- Hide nav on scroll JS -->
-  <script>
-    var prevScrollpos = window.pageYOffset;
-    window.onscroll = function () {
-      var currentScrollPos = window.pageYOffset;
-      if (prevScrollpos > currentScrollPos) {
-        document.getElementById("navContainer").style.top = "0";
-      } else {
-        document.getElementById("navContainer").style.top = "-75px";
+        <div class="footerRight">
+          <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" class="button">Get in touch</a>
+          <p class="smallText elsewhereMargin">Elsewhere</p>
+          <div class="socialFooter">
+            <a href="https://www.linkedin.com/in/jaspertu/" target="_blank">
+              <img class="socialButtonFooter hvr-grow" src="./img/linkedin.svg" loading="lazy" alt="LinkedIn">
+            </a>
+            <a href="https://www.behance.net/JasperTu" target="_blank">
+              <img class="socialButtonFooter hvr-grow" src="./img/behance.svg" loading="lazy" alt="Behance">
+            </a>
+            <a href="https://github.com/jaspertu" target="_blank">
+              <img class="socialButtonFooter hvr-grow" src="./img/github.svg" loading="lazy" alt="GitHub">
+            </a>
+            <a href="https://www.instagram.com/jasper_tu/" target="_blank">
+              <img class="socialButtonFooter hvr-grow" src="./img/instagram.svg" loading="lazy" alt="Instagram">
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- JavaScript -->
+    <script src="js/vendor/modernizr-3.8.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
+    <!-- Hide nav on scroll JS -->
+    <script>
+      var prevScrollpos = window.pageYOffset;
+      window.onscroll = function () {
+        var currentScrollPos = window.pageYOffset;
+        if (prevScrollpos > currentScrollPos) {
+          document.getElementById("navContainer").style.top = "0";
+        } else {
+          document.getElementById("navContainer").style.top = "-75px";
+        }
+        prevScrollpos = currentScrollPos;
       }
-      prevScrollpos = currentScrollPos;
-    }
-  </script>
+    </script>
 
-  <!-- Scroll down button JS -->
-  <script>
-    $(function () {
-      $('.downButton').click(function () {
-        $('html, body').animate({ scrollTop: $('section.projects').offset().top }, 'slow');
-        return false;
+    <!-- Scroll down button JS -->
+    <script>
+      $(function () {
+        $('.downButton').click(function () {
+          $('html, body').animate({ scrollTop: $('section.projects').offset().top }, 'slow');
+          return false;
+        });
       });
-    });
-  </script>
+    </script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
 
-  <!--Scroll reveal JS-->
-  <script src="./js/scrollreveal.min.js.download"></script>
-  <script>
-    // JavaScript
-    window.sr = ScrollReveal({ reset: true });
-    sr.reveal('.reveal', { duration: 1500, distance: '20px', useDelay: 'once', scale: 1, });
-  </script>
+    <!--Scroll reveal JS-->
+    <script src="./js/scrollreveal.min.js.download"></script>
+    <script>
+      // JavaScript
+      window.sr = ScrollReveal({ reset: true });
+      sr.reveal('.reveal', { duration: 1500, distance: '20px', useDelay: 'once', scale: 1, });
+    </script>
 </body>
 
 </html>
