--- a/kumoApp.html
+++ b/kumoApp.html
@@ -624,7 +624,7 @@
         </div>
 
         <!-- Adding Context in a Card -->
-        <p class="bodyTypeBold marginL2--top">App flows coming soon!</p>
+        <p class="bodyTypeBold marginL2--top">App flow videos coming soon!</p>
       </div>
     </section>
 
