--- a/canadaLanguages.html
+++ b/canadaLanguages.html
@@ -25,8 +25,18 @@
 
   <meta name="theme-color" content="#fafafa">
 
-  <!-- Typeface DM Sans -->
+  <!-- Typefaces: DM Sans, Sora, Nunito, Caudex -->
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
 
   <!-- SEO -->
   <meta name="description"
@@ -64,67 +74,66 @@
     </nav>
   </div>
 
+  <!-- Case study title -->
+  <div class="gridCenterer">
+    <header class="caseStudyHeader container reveal">
+      <h1 class="title-caseStudy">Canada's Languages</h1>
+      <h2 class="subtitle-caseStudy">A website exploring Canada's top non-official languages</h2>
+      <h3 class="bodyType marginXS--top">Jasper Tu • 1 min read</h3>
+    </header>
+  </div>
+
+  <!--Cover photo-->
+  <div class="canadaLanguagesHero caseStudyHero"></div>
+
   <!-- Back to top button -->
   <div class="topButton topButtonHidden" onclick="window.scrollTo(0, 0)" ;=""></div>
 
-  <!-- Large desktop header -->
-  <div class="gridCenterer marginTopBottom">
-    <div class="container">
+  <!-- Case study content -->
+  <div class="caseStudyContent">
 
-      <header class="jasperHeader reveal">
-        <!-- Right side of header (text) -->
-        <div class="headerRight">
-          <div class="headerTitleButton">
-            <div>
-              <h1 class="jasperTitle">
-                Canada's Languages
-              </h1>
-              <h2 class="bodyType">
-                <img class="avatar" src="./img/IMG_2685.PNG" loading="lazy" alt="Avatar">
-                <span class="bodyTypeBold">Jasper Tu</span> • Sep 2020 • 1
-                min read
-              </h2>
+    <!--Case study details (intro) -->
+    <div class="caseStudyDetailsBG">
+      <div class="gridCenterer">
+        <div class="container">
+          <div class="caseStudyDetails">
+            <!-- Left side -->
+            <div class="caseStudyDetailsLeft">
+              <h2 class="h2-caseStudy-DM">Background</h2>
+              <p class="bodyType-DM">
+                I spotted an opportunity to make an informative website for tourists vacationing in Canada. This is
+                because since Canada is considered a cultural mosaic, I wanted to use its diversity to both attract and
+                enlighten individuals who may be unfamiliar with Canadian culture. Thus, the most spoken non-official
+                languages were the focal point of my content.
+              </p>
+              <h3 class="h3-caseStudy-DM marginM--top">Objective</h3>
+              <p class="bodyType-DM">
+                Fusing data visualization and a fun visual identity to create an exciting website for tourists.
+              </p>
+              <p class="bodyTypeLarge-DM marginM--top marginS2--bottom">View the process book:</p>
+              <a href="./pdf/YSDN2008_PROJ02_TuJasper_Process.pdf" target="_blank" class="button-DM">Process Book</a>
             </div>
-            <div class="buttonMarginTop">
-              <a href="./pdf/YSDN2008_PROJ02_TuJasper_Process.pdf" class="button" target="_blank">Process Book</a>
+            <!-- Right side -->
+            <div class="caseStudyDetailsRight">
+              <h3 class="h3-caseStudy-DM">Role</h3>
+              <p class="bodyType-DM">Solo designer—Research, Information Design, Data Visualization, Visual Design,
+                Illustration, Web Design</p>
+              <h3 class="h3-caseStudy-DM marginM--top">Team</h3>
+              <p class="bodyType-DM">Jasper Tu (Me)</p>
+              <h3 class="h3-caseStudy-DM marginM--top">Duration</h3>
+              <p class="bodyType-DM">March–April 2020</p>
+              <h3 class="h3-caseStudy-DM marginM--top">Tools Used</h3>
+              <p class="bodyType-DM">Figma, Photoshop, Illustrator</p>
             </div>
           </div>
-
-          <!--Cover photo-->
-          <img class="caseStudyCover" src="./img/home-cover-Languages.jpg" loading="lazy" alt="FB cover">
-
-          <!--Project Quick Stats-->
-          <h3 class="quickStatType">
-            <p class="quickStatTitleType">Overview</p>
-            Fusing data visualization and a fun visual identity to create an exciting website for tourists<br>
-            <p class="quickStatTitleType marginS--top">Team</p>
-            Jasper Tu
-            <p class="quickStatTitleType marginS--top">Role</p>
-            Research, Information Design, Data Visualization, Visual Design
-            <p class="quickStatTitleType marginS--top">Tools</p>
-            Figma, Photoshop
-            <p class="quickStatTitleType marginS--top">Duration</p>
-            <p class="marginS--bottom">March–April 2020</p>
-            <hr>
-          </h3>
         </div>
-      </header>
+      </div>
+    </div>
 
-      <!-- Main content -->
-      <section class="marginM--top bodyWrapper">
-        <h2 class="projectTitle marginXS--bottom">About Canada's Languages</h2>
-        <p class="bodyType marginS--bottom">
-          I spotted an opportunity to make an informative
-          website for tourists vacationing in Canada. This is because since
-          Canada is considered a cultural mosaic, I wanted to use its diversity
-          to both attract and enlighten individuals who may be unfamiliar with
-          Canadian culture. Thus, the most spoken non-official languages
-          were the focal point of my content.
-        </p>
-      </section>
-
-      <div class="mediaCenterer">
-        <h3 class="bodyTypeBold marginM--top marginXS--bottom">Raw Screens</h3>
+    <!-- Images -->
+    <div class="bodyWrapperWide">
+      <div class="mediaCenterer caseStudySection">
+        <h3 class="h4-caseStudy">Website Screens</h3>
 
         <div class="contentGallery">
           <ul class="gallery">
@@ -158,97 +167,95 @@
           </ul>
         </div>
       </div>
-
     </div>
-  </div>
 
-  <!-- Footer -->
-  <footer>
-    <div class="footerContainer">
-      <div class="footerLeft">
-        <h2 class="projectTitle">
-          Let's chat! <img class="emojiMedium" src="./img/speechBalloonEmoji.png" loading="lazy" alt="Speech Balloon">
-        </h2>
-        <h3 class="projectDescription">Interested in one of my projects? Or want
-          to crack bad jokes together? (I have plenty)</h3>
-        <p class="madeWithLove smallText copyrightMargin">Designed + coded with <img class="emojiSmall"
-            src="./img/sparklingHeartEmoji.png" loading="lazy" alt="Sparkling Heart"> by
-          Jasper Tu</p>
-      </div>
+    <!-- Footer -->
+    <footer>
+      <div class="footerContainer">
+        <div class="footerLeft">
+          <h2 class="projectTitle">
+            Let's chat! <img class="emojiMedium" src="./img/speechBalloonEmoji.png" loading="lazy" alt="Speech Balloon">
+          </h2>
+          <h3 class="projectDescription">Interested in one of my projects? Or want
+            to crack bad jokes together? (I have plenty)</h3>
+          <p class="madeWithLove smallText copyrightMargin">Designed + coded with <img class="emojiSmall"
+              src="./img/sparklingHeartEmoji.png" loading="lazy" alt="Sparkling Heart"> by
+            Jasper Tu</p>
+        </div>
 
-      <div class="footerRight">
-        <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" class="button">Get in touch</a>
-        <p class="smallText elsewhereMargin">Elsewhere</p>
-        <div class="socialFooter">
-          <a href="https://www.linkedin.com/in/jaspertu/" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/linkedin.svg" loading="lazy" alt="LinkedIn">
-          </a>
-          <a href="https://www.behance.net/JasperTu" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/behance.svg" loading="lazy" alt="Behance">
-          </a>
-          <a href="https://github.com/jaspertu" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/github.svg" loading="lazy" alt="GitHub">
-          </a>
-          <a href="https://www.instagram.com/jasper_tu/" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/instagram.svg" loading="lazy" alt="Instagram">
-          </a>
+        <div class="footerRight">
+          <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" class="button">Get in touch</a>
+          <p class="smallText elsewhereMargin">Elsewhere</p>
+          <div class="socialFooter">
+            <a href="https://www.linkedin.com/in/jaspertu/" target="_blank">
+              <img class="socialButtonFooter hvr-grow" src="./img/linkedin.svg" loading="lazy" alt="LinkedIn">
+            </a>
+            <a href="https://www.behance.net/JasperTu" target="_blank">
+              <img class="socialButtonFooter hvr-grow" src="./img/behance.svg" loading="lazy" alt="Behance">
+            </a>
+            <a href="https://github.com/jaspertu" target="_blank">
+              <img class="socialButtonFooter hvr-grow" src="./img/github.svg" loading="lazy" alt="GitHub">
+            </a>
+            <a href="https://www.instagram.com/jasper_tu/" target="_blank">
+              <img class="socialButtonFooter hvr-grow" src="./img/instagram.svg" loading="lazy" alt="Instagram">
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-  <!-- JavaScript -->
-  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+    <!-- JavaScript -->
+    <script src="js/vendor/modernizr-3.8.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
-  <!-- Hide nav on scroll JS -->
-  <script>
-    var prevScrollpos = window.pageYOffset;
-    window.onscroll = function () {
-      var currentScrollPos = window.pageYOffset;
-      if (prevScrollpos > currentScrollPos) {
-        document.getElementById("navContainer").style.top = "0";
-      } else {
-        document.getElementById("navContainer").style.top = "-75px";
+    <!-- Hide nav on scroll JS -->
+    <script>
+      var prevScrollpos = window.pageYOffset;
+      window.onscroll = function () {
+        var currentScrollPos = window.pageYOffset;
+        if (prevScrollpos > currentScrollPos) {
+          document.getElementById("navContainer").style.top = "0";
+        } else {
+          document.getElementById("navContainer").style.top = "-75px";
+        }
+        prevScrollpos = currentScrollPos;
       }
-      prevScrollpos = currentScrollPos;
-    }
-  </script>
+    </script>
 
-  <!-- Scroll down button JS -->
-  <script>
-    $(function () {
-      $('.downButton').click(function () {
-        $('html, body').animate({ scrollTop: $('section.projects').offset().top }, 'slow');
-        return false;
+    <!-- Scroll down button JS -->
+    <script>
+      $(function () {
+        $('.downButton').click(function () {
+          $('html, body').animate({ scrollTop: $('section.projects').offset().top }, 'slow');
+          return false;
+        });
       });
-    });
-  </script>
+    </script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
 
-  <script>
-      (function () {
-        var $gallery = new SimpleLightbox('.gallery a', {});
-      })();
-  </script>
+    <script>
+        (function () {
+          var $gallery = new SimpleLightbox('.gallery a', {});
+        })();
+    </script>
 
-  <!--Scroll reveal JS-->
-  <script src="./js/scrollreveal.min.js.download"></script>
-  <script>
-    // JavaScript
-    window.sr = ScrollReveal({ reset: true });
-    sr.reveal('.reveal', { duration: 1500, distance: '20px', useDelay: 'once', scale: 1, });
-  </script>
+    <!--Scroll reveal JS-->
+    <script src="./js/scrollreveal.min.js.download"></script>
+    <script>
+      // JavaScript
+      window.sr = ScrollReveal({ reset: true });
+      sr.reveal('.reveal', { duration: 1500, distance: '20px', useDelay: 'once', scale: 1, });
+    </script>
 </body>
 
 </html>
