--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           </a>
         </article>
 
-        <!--Canada's Languages
+        <!--Canada's Languages-->
         <article>
           <a class="projectSingle" href="canadaLanguages.html">
             <img class="projectCover" src="./img/home-cover-Languages.jpg" loading="lazy" alt="Historia">
@@ -261,7 +261,6 @@
             </div>
           </a>
         </article>
-        -->
 
       </section>
     </div>
