--- a/fbintern.html
+++ b/fbintern.html
@@ -166,7 +166,8 @@
             <p class="bodyType">
               My intern project was not only zero-to-one in nature (it didn’t exist before my arrival) but also occupied
               a
-              space that lacked any existing data. This meant many things we wanted to do couldn’t be done at the moment
+              space that lacked a lot of existing data. This meant many things we wanted to do couldn’t be done at the
+              moment
               because we didn’t have an informed POV. The process of understanding the many constraints and further
               developing my sensitivity to user empathy couldn’t have been done without seeking the perspectives and
               knowledge of my teammates—turning to them early and often for feedback ensured my solution was focused on
